--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+/*colores*/
 * {
   padding: 0;
   margin: 0;
@@ -6,17 +7,17 @@
 }
 
 p {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   color: #7280a7;
 }
 
-h* {
-  font-weight: 700;
+h2 {
+  font-weight: 900;
 }
 
 body {
-  width: 100%;
+  width: 1440px;
   min-height: 100vh;
   background-color: #e0e8ff;
   background-image: url("../images/pattern-background-desktop.svg");
@@ -27,14 +28,14 @@ body {
 }
 
 .card {
-  width: 300px;
-  height: 500px;
+  width: 330px;
+  height: 515px;
   background-color: white;
   border-radius: 15px;
   overflow: hidden;
-  box-shadow: 0 0 5px 2px #e0e8ff;
+  box-shadow: 0 0 50px -20px #1f2f56;
   display: grid;
-  grid-template-rows: .8fr 1.5fr .2fr;
+  grid-template-rows: 1fr 1.5fr 20%;
   align-items: center;
 }
 
@@ -53,9 +54,9 @@ body {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   text-align: center;
+  justify-content: space-around;
 }
 
 .description p {
@@ -65,47 +66,76 @@ body {
 .description .plan {
   width: 100%;
   height: 35%;
-  padding: 5px;
   background-color: #f5f7ff;
   border-radius: 5px;
   display: grid;
   grid-template-columns: .5fr 1fr .5fr;
   grid-template-rows: 100%;
   justify-content: center;
-}
-
-.description .plan .music-icon {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  grid-column: 1 / 2;
-}
-
-.description .plan .music-icon img {
-  background-color: #e0e8ff;
-  border-radius: 50%;
 }
 
 .description .plan .desc-plan {
-  padding: 5px;
-  display: inline;
-  align-self: center;
-  text-align: start;
-  grid-column: 2 / 3;
+  text-align: left;
 }
 
-.description .plan .btn-change {
-  align-self: center;
-  grid-column: 3 / 4;
+.description .plan a {
+  padding-right: 10px;
+}
+
+.description .plan a:hover {
+  text-decoration: none;
+  color: #3829e0;
 }
 
 .btn-card {
-  padding: 15px;
+  padding: 0 20px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
+}
+
+.btn-card .btn-pay {
+  background-color: #3829e0;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  box-shadow: 0 5px 1rem -5px #3829e0;
+  display: flex;
+  justify-content: center;
   align-items: center;
+  color: white;
+  font-size: 12px;
+  font-weight: 900;
+}
+
+.btn-card .btn-pay:hover {
+  cursor: pointer;
+  background-color: #675cff;
+  box-shadow: 0 5px 1rem -5px #675cff;
+}
+
+.btn-card .btn-cancel {
+  text-decoration: none;
+  color: #7280a7;
+  font-weight: 900;
+  font-size: 13px;
+  align-self: center;
+  margin-top: 20px;
+}
+
+.btn-card .btn-cancel:hover {
+  color: #1f2f56;
+}
+
+@media screen and (max-whidt: 175px) {
+  body {
+    width: 375px;
+    background-image: url("../images/pattern-background-mobile.svg");
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
