--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,10 @@
 $desktopBg: url("../images/pattern-background-desktop.svg");
 $mobileBg: url("../images/pattern-background-mobile.svg");
-$pale-blue: hsl(225, 100%, 94%);
 $card-img: url("../images/illustration-hero.svg");
-$bright-blue: hsl(245, 75%, 52%);
+
+/*colores*/
+$pale-blue: hsl(225, 100%, 94%);
+$bright-blue: hsl(245, 75%, 52%) ;
 $very-pale-blue: hsl(225, 100%, 98%);
 $desaturated-blue: hsl(224, 23%, 55%);
 $dark-blue: hsl(223, 47%, 23%);
@@ -20,18 +22,18 @@ $dark-blue: hsl(223, 47%, 23%);
 }
 
 p {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   color: $desaturated-blue;
 }
 
-h* {
-  font-weight: 700;
+h2 {
+  font-weight: 900;
 }
 
 body
 {
-  width: 100%;
+  width: 1440px;
   min-height: 100vh;
   background-color: $pale-blue;
   background-image: $desktopBg;
@@ -43,14 +45,14 @@ body
 
 .card
 {
-  width: 300px;
-  height: 500px;
+  width: 330px;
+  height: 515px;
   background-color: white;
   border-radius: 15px;
   overflow: hidden;
-  box-shadow: 0 0 5px 2px $pale-blue;
+  box-shadow: 0 0 50px -20px $dark-blue;
   display: grid;
-  grid-template-rows: .8fr 1.5fr .2fr;
+  grid-template-rows: 1fr 1.5fr 20%;
   align-items: center;
 }
 
@@ -71,9 +73,9 @@ body
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   text-align: center;
+  justify-content: space-around;
 
   p
   {
@@ -84,64 +86,86 @@ body
   {
     width: 100%;
     height: 35%;
-    padding: 5px;
     background-color: $very-pale-blue;
     border-radius: 5px;
     display: grid;
     grid-template-columns: .5fr 1fr .5fr;
     grid-template-rows: 100%;
     justify-content: center;
-
-    .music-icon
-    {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      grid-column: 1 / 2;
-    }
-
-    .music-icon img
-    {
-      background-color: $pale-blue;
-      border-radius: 50%;
-    }
+    align-items: center;
 
     .desc-plan
     {
-      padding: 5px;
-      display: inline;
-      align-self: center;
-      text-align: start;
-      grid-column: 2 / 3;
+      text-align: left;
+    }
+    a
+    {
+      padding-right: 10px;
+    }
+    a:hover
+    {
+      text-decoration: none;
+      color: $bright-blue;
     }
 
-    .btn-change
-    {
-      align-self: center;
-      grid-column: 3 / 4;
-    }
   }
 }
 
 .btn-card
 {
-  padding: 15px;
+  padding: 0 20px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
 
   .btn-pay
   {
-    
+    background-color: $bright-blue;
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    box-shadow: 0 5px 1rem -5px $bright-blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 12px;
+    font-weight: 900;
+
+  }
+  .btn-pay:hover
+  {
+    cursor: pointer;
+    background-color: hsl(244, 100%, 68%);
+    box-shadow: 0 5px 1rem -5px hsl(244, 100%, 68%);
   }
 
   .btn-cancel
   {
+    text-decoration: none;
+    color: $desaturated-blue;
+    font-weight: 900;
+    font-size: 13px;
+    align-self: center;
+    margin-top: 20px;
+  }
+  .btn-cancel:hover
+  {
+    color: $dark-blue;
+  }
 
+}
+@media screen and (max-whidt: 175px){
+
+  body
+  {
+    width: 375px;
+    background-image: $mobileBg;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
 }
