--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ h2 {
 }
 
 body {
-  width: 1440px;
+  width: 100%;
   min-height: 100vh;
   background-color: #e0e8ff;
   background-image: url("../images/pattern-background-desktop.svg");
@@ -25,10 +25,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .card {
   width: 330px;
+  min-width: 250px;
   height: 515px;
   background-color: white;
   border-radius: 15px;
@@ -129,13 +132,17 @@ body {
   color: #1f2f56;
 }
 
-@media screen and (max-whidt: 175px) {
+@media screen and (max-width: 375px) {
   body {
-    width: 375px;
+    min-width: 275px;
     background-image: url("../images/pattern-background-mobile.svg");
     background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  }
+  .card {
+    min-width: 250px;
+    margin: 0 20px;
+  }
+  .desc-plan {
+    margin: 0 5px;
   }
 }
