--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -106,7 +106,10 @@ body
       text-decoration: none;
       color: $bright-blue;
     }
-
+    .music-icon
+    {
+      margin: 5px;
+    }
   }
 }
 
